--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
   "authors": [
     "dmitrizzle <d@analog.cafe>"
   ],
-  "description": "Simple chatbot bubble creator based on JSON",
+  "description": "Simple chatbot bubble creator based on JSON conversation structure",
   "license": "MIT",
   "private": true,
   "ignore": [
