--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chat-bubble",
-  "version": "1.3.0-rc.2",
+  "version": "1.3.1",
   "description": "Simple chatbot UI for Web with JSON scripting. Zero dependencies.",
   "main": "component/Bubble.js",
   "repository": {
